@@ -97,11 +97,11 @@ public class Config
 
     // Commit Log
     public String commitlog_directory;
-    public Integer commitlog_total_space_in_mb = 4096;
+    public Integer commitlog_total_space_in_mb;
     public CommitLogSync commitlog_sync;
     public Double commitlog_sync_batch_window_in_ms;
     public Integer commitlog_sync_period_in_ms;
-    public int commitlog_segment_size_in_mb = 128;
+    public int commitlog_segment_size_in_mb = 32;
 
     public String endpoint_snitch;
     public Boolean dynamic_snitch = true;
